--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "nodemon": "^2.0.12",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   }
 }
