--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "history": "^5.0.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router": "^5.2.1",
