--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.3.0",
     "@react-three/fiber": "^7.0.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@use-gesture/react": "^10.1.0",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.0.1",
