--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
     "@use-gesture/react": "^10.1.0",
     "history": "^5.0.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
